# ps1-ram-tester-sound

./: CMakeLists.txt  LICENSE  README.md  cdrom.json
.github/scripts/: buildRelease.sh  buildToolchain.sh
.github/workflows/: build.yml
assets/: bgm.vag  cdlogo.tmd  cdreadme.txt  pickup.vag  spu.vag
cmake/: options.cmake  tools.cmake
src/common/: gpu.c  gpu.h  reboot.c  reboot.h  reboot.s  sio0.c  sio0.h  spu.c  spu.h
src/main/: cpu_bench.c  cpu_bench.h  crt0.s  defs.h  font.c  font.h  gpu_colorbars.c  gpu_colorbars.h  gpu_cube.c  gpu_cube.h  main.c  mainmenu.c  mainmenu.h  modals.c  modals.h  ramconfig.c  ramconfig.h  ramtester.c  ramtester.h  renderer.c  renderer.h  sound.c  sound.h  spu_channel_test.c  spu_channel_test.h  test.c  test.h  trig.c  ui.c  ui.h
src/ps1/: cop0.h  registers.h
tools/: buildCDImage.py  requirements.txt
